using UnityEngine;

public class BankruptcyUIView : UIView
{
    private void Awake()
    {
        type = UIType.Slider;
    }
}
