using UnityEngine;

public class MachineModifyUIView_LevelUpPrice : TextUIView
{
    protected override void Awake()
    {
        base.Awake();
        Prefix = "Level Up Price: ";
    }
}
