using UnityEngine;

public class MachineModifyUIView_MachineType : TextUIView
{
    protected override void Awake()
    {
        base.Awake();
        Prefix = "Type: ";
    }
}
