using UnityEngine;

public class MachineModifyUIView_RepairPrice : TextUIView
{
    protected override void Awake()
    {
        base.Awake();
        Prefix = "Repair Price: ";
    }
}
