using UnityEngine;

public class TrackModifyUIView_LevelUpPrice : TextUIView
{
    protected override void Awake()
    {
        base.Awake();
        Prefix = "Level Up Price: ";
    }
}
