using UnityEngine;

public class MachineHpUIView : SliderUIView
{

}
