public class TextUpdateArgs : UIUpdateArgs
{
    public TextUpdateArgs(string value) : base(value)
    {
    }
}
