using UnityEngine;

public class TimeScaleTextUIView : TextUIView
{
    private void Start()
    {
        Prefix = "TimeScale: ";
    }
}
