public enum UIType
{
    Text, Slider, Button
}